fixed nav overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,14 +20,9 @@ body,html{
     box-sizing: border-box;
 }
 body{
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
-h1,h2,h3,h4,h5,p,a,li,ul,ol,button,input,textarea{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 ul,li{
     list-style: none;
 }
@@ -37,7 +32,7 @@ a{
 }
 .container{
     width: 100%;
-    max-width: 1200px;
+    max-width: 90vw;
     margin: 0 auto;
     padding: 0;
     box-sizing: border-box;
@@ -52,9 +47,6 @@ a{
 .color-main-accent{
     color: var(--MAIN_ACCENT);
 }
-
-
-
 nav{
     display: flex;
     justify-content: space-between;
@@ -69,8 +61,8 @@ nav{
     user-select: none;
 }
 .navbar{
-    position: absolute;
-    right: 0;
+    position: fixed;
+    right: 4rem;
     top: 4.25rem;
     height: 75vh;
     min-width:15vw ;
@@ -85,26 +77,29 @@ nav{
     background: var(--BG_SHADE_LIGHTER);
     border-radius: 24px;
     box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.5);
-    transition: transform 300ms ease;
+    transform: translateX(1000%);
+    transition: all 300ms ease;
 }
 .navbar::-webkit-scrollbar{
     display: none;
 }
-.navbar[aria-expanded="true"]{
+/* .navbar[aria-expanded="true"]{
+    display: flex;
+    right: 0;
+} */
+.navbar.is-open{
     transform: translateX(0);
-    opacity: 1;
 }
-.navbar[aria-expanded="false"]{
-    transform: translateX(1000%);
-    opacity: 0;
-}
+
+    
+
 .mobile-nav-toggle {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 0.5rem;
-    width: 2rem;
+    width: 2.5rem;
     border: none;
     background: transparent;
     transform-origin: 50% 50%;
@@ -147,9 +142,15 @@ nav{
     text-transform: uppercase;
     font-size: 1.5rem;
     width: 100%;
-    padding: 1rem 2rem;
     border-radius: 4px;
     transition: all ease 300ms;
+}
+.nav-links a{
+    display: block;
+    width: inherit;
+    padding: 1rem 2rem;
+    border-radius: 4px;
+
 }
 .nav-links:hover{
     background-color: var(--MAIN_ACCENT);
